ignore testing that download from yt in github
downloading video from youtube is blocked when the pytest is running on git action

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,6 +29,7 @@ jobs:
         pip install -r requirements.txt
         pip install -r test-requirements.txt
     - name: Test with pytest
-      # skip bilibili related tests since the download seems to be blocked when running on github actions
+      # skip some tests since the download seems to be blocked when running on github actions
+      # bilibili, youtube
       run: |
-        pytest -k "not bili"
+        pytest -k "not _ng_"
